[gd_scene load_steps=3 format=3 uid="uid://w37clktmv21o"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_exvrm"]
[ext_resource type="AudioStream" uid="uid://kxim1gsuf0km" path="res://sound/buttonclick.mp3" id="3_6frx1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_exvrm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -108.0
offset_right = 102.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "-= PAUSED =-"
horizontal_alignment = 1

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/VBoxContainer/SaveButton"]
stream = ExtResource("3_6frx1")

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Load
"

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[connection signal="pressed" from="Panel/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
